--- a/Projekt/Projekt/Views/Login/Login.cshtml
+++ b/Projekt/Projekt/Views/Login/Login.cshtml
@@ -42,7 +42,8 @@
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Register as a new user", "Register")
+                    @Html.ActionLink("Register as a new user", "RegisterUser", "User")
+                    
                 </p>
                 @* Enable this once you have account confirmation enabled for password reset functionality
                     <p>
