--- a/Projekt/Projekt/Views/Shared/_LoginPartial.cshtml
+++ b/Projekt/Projekt/Views/Shared/_LoginPartial.cshtml
@@ -1,15 +1,19 @@
 ﻿@using Microsoft.AspNet.Identity
-@if (Request.IsAuthenticated)
+
+@if (Session["UserId"] != null )
 {
+    
+
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
     @Html.AntiForgeryToken()
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink("Settings", "Index", "Home", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        <li>@Html.ActionLink("Logg Out", "LoggOut", "Login", routeValues: null, htmlAttributes: new { title = "Manage" })</li>
+       
     </ul>
     }
 }
